# ITKRLEImage

./: .clang-format  README.rst  circle.yml  itk-module.cmake  pyproject.toml  setup.py  uncrustify_itk.cfg
.circleci/: config.yml
.github/workflows/: build-test-package.yml  clang-format-linter.yml
doc/: InsightJournal.bib  Makefile  RLEImage.tex
include/: RLEImage.h  RLEImageConstIterator.h  RLEImageIterator.h  RLEImageRegionConstIterator.h  RLEImageRegionIterator.h  RLEImageScanlineConstIterator.h  RLEImageScanlineIterator.h  RLERegionOfInterestImageFilter.h  itkRLEImage.h  itkRLEImage.hxx  itkRLEImageConstIterator.h  itkRLEImageIterator.h  itkRLEImageRegionConstIterator.h  itkRLEImageRegionIterator.h  itkRLEImageScanlineConstIterator.h  itkRLEImageScanlineIterator.h  itkRLERegionOfInterestImageFilter.h  itkRLERegionOfInterestImageFilter.hxx
test/: CMakeLists.txt  iteratorTests.cxx  itkImageIteratorTest.cxx  itkImageIteratorWithIndexTest.cxx  itkImageIteratorsForwardBackwardTest.cxx  itkImageRegionConstIteratorWithOnlyIndexTest.cxx  itkImageRegionIteratorTest.cxx  itkImageScanlineIteratorTest1.cxx  itkIteratorTests.cxx  itkRLEImageTest.cxx  itkRegionOfInterestImageFilterTest.cxx  manualTest.cxx  rleStats.cxx
test/Docker/: Dockerfile  build.sh  run.sh  test.sh
wrapping/: CMakeLists.txt  itkRLEImage.wrap  itkRLERegionOfInterestImageFilter.wrap
